[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pyalps"
version = "2.3.4b1"
description = "Python Applications and Libraries for Physics Simulations"
readme = "bindings/python/pyalps/README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["numpy", "scipy"]

[tool.scikit-build]
cmake.source-dir = "bindings/python/pyalps"
wheel.packages = ["bindings/python/pyalps/src/pyalps"]
build.verbose = true

[tool.scikit-build.cmake.define]
ALPS_DIR = { env = "ALPS_DIR" }

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
